--- a/index.html
+++ b/index.html
@@ -14,27 +14,29 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <!--link rel= "stylesheet" href="css/styles.css" -->
+    <link rel = "stylesheet" href="css/style.css">
 </head>
 
 <body>
 
 
 <div class="container-fluid">
-
+<div class="profile">
 <div class="col col-sm-6 col-md-4 col-lg-3 col-xl-12">
 <img src="img/profile.jpg" alt="Profile Pic" width="150" height="150"/>
-<p>Brandon Thompson</p>
+<p><b>Brandon Thompson</b></p>
+</div>
 </div>
 
 
 <div class="col col-sm-6 col-md-4 col-lg-3 col-xl-12">
 
-    <p>Bio<br/>
+</div>
+<div class="bio">
+    <p><b>Bio</b><br/>
         My name is Brandon Thompson and I am a student in the application development program at BC. My main goal is to build my skills more for a future career in the IT field.
     </p>
 </div>
-
 
 </div>
 
