--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 </div>
 <div class="bio">
     <p><b>Bio</b><br/>
-        My name is Brandon Thompson and I am a student in the application development program at BC. My main goal is to build my skills more for a future career in the IT field.
+        My name is Brandon Thompson and I am a student in the application development program at BC.My main goal is to build my skills more for a future career in the IT field.</br></br> <b>Hobbies: </b></br>Video games, watching sports, watching movies, listening to music, collecting cards.
+        
     </p>
 </div>
 
