--- a/html/webresources.html
+++ b/html/webresources.html
@@ -27,7 +27,7 @@
 <div class="container-fluid">
 <div class="profile">
 <div class="col col-sm-6 col-md-4 col-lg-3 col-xl-12">
-<img src="img/profile.jpg" alt="Profile Pic" width="150" height="150"/>
+<img src="WebRoot/img/profile.jpg" alt="Profile Pic" width="150" height="150"/>
 <p><b>Brandon Thompson</b></p>
 </div>
 </div>
