--- a/html/webresources.html
+++ b/html/webresources.html
@@ -51,7 +51,31 @@
 <h1>Web Resources</h1>
 
 <ol>
-<li><p><a href = "" >Name of the Web Resource</a><br/>
+<li><p><a href = "https://skillcrush.com/blog/front-end-back-end-full-stack/" >SkillCrush</a><br/>
+    Text here for what information resources contain, why this information is valuable,
+    to what kind of developer is it most valuable. And anything else.
+<strong>Rating</strong>
+
+</p></li>
+<li><p><a href = "https://www.freecodecamp.org/news/how-to-become-a-full-stack-web-developer-in-2020/" >FreeCodeCamp</a><br/>
+    Text here for what information resources contain, why this information is valuable,
+    to what kind of developer is it most valuable. And anything else.
+<strong>Rating</strong>
+
+</p></li>
+<li><p><a href = "https://medium.com/@alexkatrompas/the-hard-truth-about-the-full-stack-developer-myths-and-lies-945ffadeeb8c" >Medium article about web development</a><br/>
+    Text here for what information resources contain, why this information is valuable,
+    to what kind of developer is it most valuable. And anything else.
+<strong>Rating</strong>
+
+</p></li>
+<li><p><a href = "https://www.w3schools.com/whatis/whatis_fullstack.asp" >w3Schools</a><br/>
+    Text here for what information resources contain, why this information is valuable,
+    to what kind of developer is it most valuable. And anything else.
+<strong>Rating</strong>
+
+</p></li>
+<li><p><a href = "https://www.geeksforgeeks.org/what-is-full-stack-development/" >GeeksforGeeks</a><br/>
     Text here for what information resources contain, why this information is valuable,
     to what kind of developer is it most valuable. And anything else.
 <strong>Rating</strong>
