--- a/html/webresources.html
+++ b/html/webresources.html
@@ -17,7 +17,7 @@
     <link rel = "stylesheet" href="css/style.css">
 
     <style>
-        div{}
+        div{border:solid}
     </style>
 </head>
 
@@ -25,22 +25,13 @@
 
 
 <div class="container-fluid">
-<div class="profile">
-<div class="col col-sm-6 col-md-4 col-lg-3 col-xl-12">
 
-</div>
-</div>
+
 
 
 <div class="col col-sm-6 col-md-4 col-lg-3 col-xl-12">
 
-</div>
-<div class="bio">
-    <p><b>Bio</b><br/>
-        My name is Brandon Thompson and I am a student in the application development program at BC.My main goal is to build my skills more for a future career in the IT field.</br></br> <b>Hobbies: </b></br>Video games, watching sports, watching movies, listening to music, collecting cards.
-        
-    </p>
-</div>
+
 
 
 
@@ -83,8 +74,8 @@
 </p></li>
 </ol>
 </div>
-
-
+<a href="../index.html">Main</a>
+</div>
 
 
 </body>
