--- a/html/webresources.html
+++ b/html/webresources.html
@@ -43,33 +43,34 @@
 
 <ol>
 <li><p><a href = "https://skillcrush.com/blog/front-end-back-end-full-stack/" >SkillCrush</a><br/>
-    Text here for what information resources contain, why this information is valuable,
-    to what kind of developer is it most valuable. And anything else.
-<strong>Rating</strong>
+    This site explains the difference between front-end, back-end, and full stack development.
+    This is a good resource to use because it tells us what goes into each of them with  a decent
+    amount of detail.
+<strong>Rating: 4/5 </strong>
 
 </p></li>
 <li><p><a href = "https://www.freecodecamp.org/news/how-to-become-a-full-stack-web-developer-in-2020/" >FreeCodeCamp</a><br/>
-    Text here for what information resources contain, why this information is valuable,
-    to what kind of developer is it most valuable. And anything else.
-<strong>Rating</strong>
+    This is another website that can be used to show the differences between front-end, back-end, and full-stack development.
+    This is a great resource because it gives a ton of detail and even offers courses and tutorials to follow.
+<strong>Rating: 5/5</strong>
 
 </p></li>
 <li><p><a href = "https://medium.com/@alexkatrompas/the-hard-truth-about-the-full-stack-developer-myths-and-lies-945ffadeeb8c" >Medium article about web development</a><br/>
-    Text here for what information resources contain, why this information is valuable,
-    to what kind of developer is it most valuable. And anything else.
-<strong>Rating</strong>
+    This is an article by a developer who seems to have some decent experience working in the field.
+    They explain more about what it is like to work in the industry and what kind of things you might be dealing with.
+<strong>Rating: 4.5/5</strong>
 
 </p></li>
 <li><p><a href = "https://www.w3schools.com/whatis/whatis_fullstack.asp" >w3Schools</a><br/>
-    Text here for what information resources contain, why this information is valuable,
-    to what kind of developer is it most valuable. And anything else.
-<strong>Rating</strong>
+    W3Schools is an amazing resource to use to learn more about web development or just coding in general.
+    I've been using this website for several years to learn more from the tutorials offered from the site.
+<strong>Rating: 5/5</strong>
 
 </p></li>
 <li><p><a href = "https://www.geeksforgeeks.org/what-is-full-stack-development/" >GeeksforGeeks</a><br/>
-    Text here for what information resources contain, why this information is valuable,
-    to what kind of developer is it most valuable. And anything else.
-<strong>Rating</strong>
+    This site gives a brief explanation of what the differences are between the front end and the back end of development.
+    This page will also provide tutorials on a variety of different topics that deal with coding.
+<strong>Rating: 4/5</strong>
 
 </p></li>
 </ol>
